# sockslink

./: .gitignore  CMakeLists.txt  config.h.cmake
cmake/modules/: FindEvent.cmake
contrib/: dummy-helper.py  pam-helper.py  simple-helper.py  sockslinkd.conf
debian/: changelog  control  copyright  rules  sockslink.default  sockslink.init
doc/: sockslinkd.8
src/: CMakeLists.txt  args.c  args.h  client.c  client.h  daemonize.c  daemonize.h  event-compat.c  event-compat.h  helper.c  helper.h  list.h  log.c  log.h  main.c  server.c  server.h  sockslink.c  sockslink.h  utils.c  utils.h
